// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmployerBenefitList when all data are present renders all data fields 1`] = `
Array [
  <OtherLeaveEntry
    amount="$250 every month"
    dates="8/12/2021 – 12/30/2021"
    key="0"
    label="Benefit 1"
    reviewRowLevel="4"
    type="Accrued paid leave"
  />,
  <OtherLeaveEntry
    amount="$250 every month"
    dates="8/12/2021 – 12/30/2021"
    key="1"
    label="Benefit 2"
    reviewRowLevel="4"
    type="Short-term disability insurance"
  />,
  <OtherLeaveEntry
    amount="$250 every month"
    dates="8/12/2021 – 12/30/2021"
    key="2"
    label="Benefit 3"
    reviewRowLevel="4"
    type="Permanent disability insurance"
  />,
  <OtherLeaveEntry
    amount="$250 every month"
    dates="8/12/2021 – 12/30/2021"
    key="3"
    label="Benefit 4"
    reviewRowLevel="4"
    type="Family or medical leave insurance"
  />,
]
`;

exports[`EmployerBenefitList when data are missing doesn't render missing data 1`] = `
<OtherLeaveEntry
  amount={null}
  dates=""
  key="0"
  label="Benefit 1"
  reviewRowLevel="4"
  type={null}
/>
`;

exports[`Final Review Page when all data is present renders Review page with final review page content and only edit links for Part 2/3 sections 1`] = `
<div
  className="measure-6"
>
  <BackButton />
  <Title
    hidden={true}
  >
    Check your answers before submitting your application.
  </Title>
  <Heading
    className="margin-top-0"
    level="2"
    size="1"
  >
    <HeadingPrefix>
      Part 1
    </HeadingPrefix>
    Review: Tell us about yourself and your leave
  </Heading>
  <Lead>
    <Trans
      i18nKey="pages.claimsReview.partDescription"
      tOptions={
        Object {
          "context": "1",
        }
      }
      values={
        Object {
          "absence_id": "NTN-111-ABS-01",
        }
      }
    />
  </Lead>
  <ReviewHeading
    editText="Edit"
    level="2"
  >
    Your identity
  </ReviewHeading>
  <ReviewRow
    label="Name"
    level="3"
  >
    Jane  Doe
  </ReviewRow>
  <ReviewRow
    label="Residential address"
    level="3"
  >
    1234 My St., Boston, MA 00000
  </ReviewRow>
  <ReviewRow
    label="Driver's License Number"
    level="3"
  >
    *********
  </ReviewRow>
  <ReviewRow
    label="Social Security Number or ITIN"
    level="3"
  >
    ***-**-****
  </ReviewRow>
  <ReviewRow
    label="Date of birth"
    level="3"
  >
    **/**/****
  </ReviewRow>
  <ReviewHeading
    editText="Edit"
    level="2"
  >
    Employment information
  </ReviewHeading>
  <ReviewRow
    label="Employer's FEIN"
    level="3"
  >
    12-3456789
  </ReviewRow>
  <ReviewRow
    label="Notified employer"
    level="3"
  >
    Notified employer on 1/1/2021
  </ReviewRow>
  <ReviewRow
    label="Work schedule type"
    level="3"
  >
    Consistent from week to week
  </ReviewRow>
  <ReviewHeading
    editText="Edit"
    level="2"
  >
    Leave details
  </ReviewHeading>
  <ReviewRow
    label="Leave type"
    level="3"
  >
    Medical leave
  </ReviewRow>
  <ReviewRow
    label="Medical leave for pregnancy or birth"
    level="3"
  >
    No
  </ReviewRow>
  <ReviewRow
    label="Continuous leave"
    level="3"
  >
    1/1/2021 – 6/1/2021
  </ReviewRow>
  <ReviewRow
    label="Reduced leave"
    level="3"
  >
    No
  </ReviewRow>
  <ReviewRow
    label="Intermittent leave"
    level="3"
  >
    No
  </ReviewRow>
  <ReviewHeading
    editText="Edit"
    level="2"
  >
    Other leave, income, and benefits
  </ReviewHeading>
  <ReviewRow
    label="Employer-sponsored benefits?"
    level="3"
  >
    No
  </ReviewRow>
  <ReviewRow
    label="Other sources of income?"
    level="3"
  >
    No
  </ReviewRow>
  <Heading
    level="2"
    size="1"
  >
    <HeadingPrefix>
      Part 2
    </HeadingPrefix>
    Review: Your payment information
  </Heading>
  <ReviewHeading
    editHref="/claims/payment-method?claim_id=mock_application_id"
    editText="Edit"
    level="2"
  >
    Payment information
  </ReviewHeading>
  <ReviewRow
    label="Payment method"
    level="3"
  >
    Direct deposit
  </ReviewRow>
  <ReviewRow
    label="Routing number"
    level="3"
  >
    1234567890
  </ReviewRow>
  <ReviewRow
    label="Account number"
    level="3"
  >
    091000022
  </ReviewRow>
  <ReviewRow
    label="Account type"
    level="3"
  >
    Checking
  </ReviewRow>
  <Heading
    level="2"
    size="1"
  >
    <HeadingPrefix>
      Part 3
    </HeadingPrefix>
    Review: Upload document
  </Heading>
  <div
    className="margin-top-8 text-center"
  >
    <Spinner
      aria-valuetext="Loading"
    />
  </div>
  <Button
    className="margin-top-3"
    loading={false}
    onClick={[Function]}
    type="button"
  >
    Submit application
  </Button>
</div>
`;

exports[`Final Review Page when all data is present renders Review page with final review page content and only edit links for Part 2/3 sections 2`] = `
Array [
  "If you need to make edits to Part 1, you’ll need to contact our Contact Center at (833) 344‑7365. Your application ID is ",
  <strong
    key="strong-1"
  >
    NTN-111-ABS-01
  </strong>,
]
`;

exports[`Intermittent leave frequency renders the leave frequency and duration in plain language 1`] = `"Estimated 2 absences per month, each lasting 3 days."`;

exports[`Intermittent leave frequency renders the leave frequency and duration in plain language 2`] = `"Estimated 2 absences per week, each lasting 3 days."`;

exports[`Intermittent leave frequency renders the leave frequency and duration in plain language 3`] = `"Estimated 2 absences per month, each lasting 3 days."`;

exports[`Intermittent leave frequency renders the leave frequency and duration in plain language 4`] = `"Estimated 2 absences per month, each lasting 3 hours."`;

exports[`Intermittent leave frequency renders the leave frequency and duration in plain language 5`] = `"Estimated 2 absences per week, each lasting 3 hours."`;

exports[`Intermittent leave frequency renders the leave frequency and duration in plain language 6`] = `"Estimated 2 absences per month, each lasting 3 hours."`;

exports[`OtherIncomeList when all data are present renders all data fields 1`] = `
Array [
  <OtherLeaveEntry
    amount="$250 every month"
    dates="8/12/2021 – 12/30/2021"
    key="0"
    label="Income 1"
    reviewRowLevel="4"
    type="Workers Compensation"
  />,
  <OtherLeaveEntry
    amount="$250 every month"
    dates="8/12/2021 – 12/30/2021"
    key="1"
    label="Income 2"
    reviewRowLevel="4"
    type="Unemployment Insurance"
  />,
  <OtherLeaveEntry
    amount="$250 every month"
    dates="8/12/2021 – 12/30/2021"
    key="2"
    label="Income 3"
    reviewRowLevel="4"
    type="Social Security Disability Insurance"
  />,
  <OtherLeaveEntry
    amount="$250 every month"
    dates="8/12/2021 – 12/30/2021"
    key="3"
    label="Income 4"
    reviewRowLevel="4"
    type="Disability benefits under a governmental retirement plan"
  />,
  <OtherLeaveEntry
    amount="$250 every month"
    dates="8/12/2021 – 12/30/2021"
    key="4"
    label="Income 5"
    reviewRowLevel="4"
    type="Jones Act benefits"
  />,
  <OtherLeaveEntry
    amount="$250 every month"
    dates="8/12/2021 – 12/30/2021"
    key="5"
    label="Income 6"
    reviewRowLevel="4"
    type="Railroad Retirement benefits"
  />,
  <OtherLeaveEntry
    amount="$250 every month"
    dates="8/12/2021 – 12/30/2021"
    key="6"
    label="Income 7"
    reviewRowLevel="4"
    type="Earnings from another employer"
  />,
  <OtherLeaveEntry
    amount="$250 every month"
    dates="8/12/2021 – 12/30/2021"
    key="7"
    label="Income 8"
    reviewRowLevel="4"
    type="Earnings from self-employment"
  />,
]
`;

exports[`OtherIncomeList when data are missing doesn't render missing data 1`] = `
<OtherLeaveEntry
  amount={null}
  dates=""
  key="0"
  label="Income 1"
  reviewRowLevel="4"
  type={null}
/>
`;

exports[`OtherLeaveEntry when all data are present renders all data fields 1`] = `
<ReviewRow
  label="Benefit 1"
  level="4"
>
  Medical or family leave
  <br />
  07-22-2020 - 09-22-2020
  <br />
  $250 per month
</ReviewRow>
`;

exports[`OtherLeaveEntry when data are missing doesn't render missing data 1`] = `
<ReviewRow
  label="Benefit 1"
  level="4"
/>
`;

exports[`Part 1 Review Page when all data is present renders Review page with Part 1 content and edit links 1`] = `
<div
  className="measure-6"
>
  <BackButton />
  <Title
    hidden={true}
  >
    Check your answers before submitting your application.
  </Title>
  <Heading
    className="margin-top-0"
    level="2"
    size="1"
  >
    <HeadingPrefix>
      Part 1
    </HeadingPrefix>
    Review and confirm: Tell us about yourself and your leave
  </Heading>
  <ReviewHeading
    editHref="/claims/name?claim_id=mock_application_id"
    editText="Edit"
    level="3"
  >
    Your identity
  </ReviewHeading>
  <ReviewRow
    label="Name"
    level="4"
  >
    Jane  Doe
  </ReviewRow>
  <ReviewRow
    label="Residential address"
    level="4"
  >
    1234 My St., Boston, MA 00000
  </ReviewRow>
  <ReviewRow
    label="Mailing address"
    level="4"
  >
    124 My St., Boston, MA 00000
  </ReviewRow>
  <ReviewRow
    label="Driver's License Number"
    level="4"
  >
    *********
  </ReviewRow>
  <ReviewRow
    label="Social Security Number or ITIN"
    level="4"
  >
    ***-**-****
  </ReviewRow>
  <ReviewRow
    label="Date of birth"
    level="4"
  >
    **/**/****
  </ReviewRow>
  <ReviewHeading
    editHref="/claims/employment-status?claim_id=mock_application_id"
    editText="Edit"
    level="3"
  >
    Employment information
  </ReviewHeading>
  <ReviewRow
    label="Employer's FEIN"
    level="4"
  >
    12-3456789
  </ReviewRow>
  <ReviewRow
    label="Notified employer"
    level="4"
  >
    Notified employer on 1/1/2021
  </ReviewRow>
  <ReviewRow
    label="Work schedule type"
    level="4"
  >
    Consistent from week to week
  </ReviewRow>
  <ReviewHeading
    editHref="/claims/leave-reason?claim_id=mock_application_id"
    editText="Edit"
    level="3"
  >
    Leave details
  </ReviewHeading>
  <ReviewRow
    label="Leave type"
    level="4"
  >
    Medical leave
  </ReviewRow>
  <ReviewRow
    label="Medical leave for pregnancy or birth"
    level="4"
  >
    No
  </ReviewRow>
  <ReviewRow
    label="Continuous leave"
    level="4"
  >
    1/1/2021 – 6/1/2021
  </ReviewRow>
  <ReviewRow
    label="Reduced leave"
    level="4"
  >
    No
  </ReviewRow>
  <ReviewRow
    label="Intermittent leave"
    level="4"
  >
    No
  </ReviewRow>
  <ReviewHeading
    editHref="/claims/employer-benefits?claim_id=mock_application_id"
    editText="Edit"
    level="3"
  >
    Other leave, income, and benefits
  </ReviewHeading>
  <ReviewRow
    label="Employer-sponsored benefits?"
    level="4"
  >
    No
  </ReviewRow>
  <ReviewRow
    label="Other sources of income?"
    level="4"
  >
    No
  </ReviewRow>
  <div
    className="margin-top-6 margin-bottom-2"
  >
    <p>
      Once you review and confirm Part 1, your in-progress application will be viewable by our Contact Center staff. If you need to make edits to Part 1, you’ll need to contact our Contact Center at (833) 344‑7365.
    </p>
    <p>
      We’ll also notify your employer that you’ve started an application for paid family and medical leave.
    </p>
    <p>
      Next, you’ll be able to work on Parts 2 and 3, and submit your application.
    </p>
  </div>
  <Button
    className="margin-top-3"
    loading={false}
    onClick={[Function]}
    type="button"
  >
    Submit Part 1
  </Button>
</div>
`;

exports[`PreviousLeaveList when all data are present renders all data fields 1`] = `
<OtherLeaveEntry
  dates="8/12/2021 – 12/30/2021"
  key="0"
  label="Previous leave 1"
  reviewRowLevel="4"
/>
`;

exports[`PreviousLeaveList when data are missing doesn't render missing data 1`] = `
<OtherLeaveEntry
  dates=""
  key="0"
  label="Previous leave 1"
  reviewRowLevel="4"
/>
`;

exports[`Reduced leave renders WeeklyTimeTable for the reduced leave period 1`] = `
<ReviewRow
  label="Reduced leave schedule"
  level="4"
  noBorder={true}
>
  <WeeklyTimeTable
    className="margin-bottom-0"
    weeks={
      Array [
        Array [
          null,
          390,
          null,
          null,
          null,
          480,
          null,
        ],
      ]
    }
  />
</ReviewRow>
`;

exports[`Work patterns has internationalized strings for each work pattern type 1`] = `"Consistent from week to week"`;

exports[`Work patterns has internationalized strings for each work pattern type 2`] = `"Hours alternate between weekly schedules"`;

exports[`Work patterns has internationalized strings for each work pattern type 3`] = `"Not consistent from week to week"`;

exports[`Work patterns shows average weekly hours if work pattern type is variable 1`] = `"40h"`;

exports[`Work patterns shows work pattern days if work pattern type is fixed 1`] = `
<WorkPatternTable
  weeks={
    Array [
      Array [
        WorkPatternDay {
          "day_of_week": "Sunday",
          "minutes": 0,
          "week_number": 1,
        },
        WorkPatternDay {
          "day_of_week": "Monday",
          "minutes": 480,
          "week_number": 1,
        },
        WorkPatternDay {
          "day_of_week": "Tuesday",
          "minutes": 480,
          "week_number": 1,
        },
        WorkPatternDay {
          "day_of_week": "Wednesday",
          "minutes": 480,
          "week_number": 1,
        },
        WorkPatternDay {
          "day_of_week": "Thursday",
          "minutes": 480,
          "week_number": 1,
        },
        WorkPatternDay {
          "day_of_week": "Friday",
          "minutes": 480,
          "week_number": 1,
        },
        WorkPatternDay {
          "day_of_week": "Saturday",
          "minutes": 0,
          "week_number": 1,
        },
      ],
    ]
  }
/>
`;
